--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@types/redux-logger": "^3.0.9",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
@@ -26,6 +27,8 @@
     "node-sass": "^6.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react-loadable": "^5.5.0",
+    "react-refresh": "^0.10.0",
+    "react-refresh-typescript": "^2.0.2",
     "redux-logger": "^3.0.6",
     "sass": "^1.41.0",
     "sass-loader": "^12.1.0",
