--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
+    "p-min-delay": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
