--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
 
+    "@typescript-eslint/no-var-requires": 0,
+
     "prettier/prettier": [
       "error",
       {
