--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --node-env production ",
     "lint": "eslint . --ext .ts,tsx src/",
     "lint:fix": "eslint --fix --ext .ts,tsx  src/",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch",
     "prettier": "prettier --check \"src/**/(*.tsx|*.ts|*.jsx|*.js|*.scss|*.css)\"",
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.jsx|*.js|*.scss|*.css)\""
   },
@@ -17,6 +18,8 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "@testing-library/react": "^12.1.1",
+    "@types/node": "^16.10.2",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
@@ -53,11 +56,14 @@
   "dependencies": {
     "@loadable/component": "^5.15.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
+    "jest": "^27.2.4",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -65,7 +71,8 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "ts-jest": "^27.0.5"
   },
   "types": "./src/types/index.d.ts"
 }
