--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "extends": "./base.json",
-  "include": ["src/**/*"], //"tests/**/*"
-  "exclude": ["node_modules", "build", "**/*.spec.ts"]
+  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "webpack",
+    "jest"
+  ]
 }
