--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/core/index.tsx",
   "scripts": {
     "dev": "webpack serve --node-env development",
+    "staging": "webpack serve --node-env staging",
     "build": "webpack --node-env production ",
     "lint": "eslint . --ext .ts,tsx src/",
     "lint:fix": "eslint --fix --ext .ts,tsx  src/",
@@ -16,6 +17,10 @@
   "author": "Cao Hoang - MOMO",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^17.0.22",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.3.0",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@testing-library/react": "^12.1.1",
@@ -27,6 +32,7 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -35,6 +41,10 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@types/jest": "^27.0.2",
+    "ts-jest": "^27.0.5",
+    "jest": "^27.2.4",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
@@ -57,16 +67,11 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
+    "@mui/material": "^5.0.6",
+    "@mui/styled-engine-sc": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.22",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
-    "jest": "^27.2.4",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -75,7 +80,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "ts-jest": "^27.0.5"
+    "styled-components": "^5.3.3"
   },
   "types": "./src/types/index.d.ts",
   "browserslist": {
