--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
   "author": "Cao Hoang - MOMO",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@testing-library/react": "^12.1.1",
-    "@types/node": "^16.10.2",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "dotenv-webpack": "^7.0.3",
@@ -39,12 +42,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.2.4",
+    "less": "^4.1.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/jest": "^27.0.2",
-    "ts-jest": "^27.0.5",
-    "jest": "^27.2.4",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
@@ -55,6 +56,8 @@
     "sass-resources-loader": "^2.2.4",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
+    "text-transform-loader": "^2.0.0",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.3",
@@ -66,18 +69,21 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@craco/craco": "^6.4.0",
     "@loadable/component": "^5.15.0",
-    "@mui/material": "^5.0.6",
-    "@mui/styled-engine-sc": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.1",
+    "add": "^2.0.6",
+    "antd": "^4.16.13",
     "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
+    "less-loader": "^6.0.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3"
