--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.22",
-    "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "@types/redux-logger": "^3.0.9",
@@ -49,7 +48,6 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
-    "react-loadable": "^5.5.0",
     "redux-logger": "^3.0.6",
     "sass": "^1.41.0",
     "sass-loader": "^12.1.0",
@@ -66,17 +64,16 @@
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "babel-plugin-react-scoped-css": "^1.1.1",
+    "scoped-css-loader": "^1.0.0",
+    "less-loader": "^6.0.0"
   },
   "dependencies": {
-    "@craco/craco": "^6.4.0",
     "@loadable/component": "^5.15.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "add": "^2.0.6",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
-    "framer-motion": "^4.1.17",
-    "less-loader": "^6.0.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -84,9 +81,11 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-transition-group": "^4.4.2",
+    "react-use": "^17.3.1",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^2.2.19"
   },
   "types": "./src/types/index.d.ts",
   "browserslist": {
