--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "./base.json",
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "build",
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "**/*.test.ts",
-    "webpack",
-    "jest"
-  ]
+  "exclude": ["node_modules", "build", "**/*.spec.ts", "**/*.spec.tsx", "webpack", "jest"]
 }
